--- a/compositional-data.cabal
+++ b/compositional-data.cabal
@@ -14,11 +14,14 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Data.Comp.Term
+  exposed-modules:     Control.Monad.Trans.Fresh
+                     , Data.Comp.Equality
+                     , Data.Comp.Term
   other-modules:       Prelude
   build-depends:       base >= 4.7 && < 5
                      , bifunctor >= 0.1 && < 0.2
                      , category >= 0.2.0.1 && < 0.3
+                     , transformers >= 0.5 && < 0.6
                      , util >= 0.1.11 && < 0.2
   default-language:    Haskell2010
   default-extensions:  UnicodeSyntax
@@ -33,8 +36,11 @@ library
                      , FlexibleInstances
                      , MultiParamTypeClasses
                      , MonadComprehensions
+                     , DerivingStrategies
                      , StandaloneDeriving
+                     , GeneralizedNewtypeDeriving
                      , DeriveFunctor, DeriveFoldable, DeriveTraversable
+                     , PackageImports
   ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                        -Wincomplete-record-updates -Wincomplete-uni-patterns
                        -Werror=incomplete-patterns
